Completed Assignment for HTML/CSS

--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <!-- Zhi Chen Dev Mountain Basecamp HTML & CSS Assignment -->
+    <title>HTML & CSS Assignment</title>
+</head>
+
+<body>
+    <header>
+        <div class="container">
+            <div class="branding">
+                <h1>Zhi Chen Company</h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#/">Contact</a></li>
+                    <li><a href="#/">About</a></li>
+                    <li><a href="#/">Home</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <section id="showcase">
+        <div class="container">
+            <h1>THE MORE YOU KNOW</h1>
+        </div>
+    </section>
+
+    <section id="blocks">
+            <!-- add mint green blocks -->
+            <div id="block11"></div>
+            <div id="block12"></div>
+            <div id="block13"></div>
+    </section>
+
+    <section id="blocks">
+        <!-- add light orange blocks -->
+            <div id="block21"></div>
+            <div id="block22"></div>
+    </section>
+
+    <section id="news">
+        <div class="container">
+            <!-- add words & tiger pic -->
+            <article>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi praesentium assumenda voluptas corporis velit tempora error hic dolorem fugiat, ex natus amet, cupiditate dignissimos vitae inventore earum accusantium accusamus aperiam aliquam deleniti, placeat iusto provident non! Quo obcaecati maxime porro odit, necessitatibus tempore assumenda. Fugiat ut optio vitae deserunt reiciendis, eos accusamus ipsum hic placeat, odit inventore architecto natus beatae.</p>
+                <img src="./tiger.jpg" alt="tiger picture">
+            </article>
+        </div>
+    </section>
+</body>
+
+<footer>
+    <p id="footText">Zhi Chen, Copyright &copy; 2018 </p>
+</footer>
+
+</html>
